fixing some layout issues

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -8,9 +8,32 @@
 </head>
 <body>
     <header>
-        <nav>
+        <div class="header-text">
             <p>Header Content</p>
-        </nav>
     </header>
+
+        <nav class="menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </nav>
+
+    <div class="container">
+        <div class="main-content">
+            <h2>Main Content</h1>
+            <p>Main content area</p>
+        </div>
+        <div class="aside-content">
+            <h2>Aside Content</h2>
+            <p>This is the sidebar content.</p>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <p>Footer Content</p>
+    </footer>
 </body>
 </html>
