fixed  some details about the layout

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -12,6 +12,7 @@
             <p>Header Content</p>
     </header>
 
+
         <nav class="menu">
             <ul>
                 <li><a href="#">Home</a></li>
@@ -21,16 +22,14 @@
             </ul>
         </nav>
 
-    <div class="container">
-        <div class="main-content">
-            <h2>Main Content</h1>
-            <p>Main content area</p>
-        </div>
-        <div class="aside-content">
-            <h2>Aside Content</h2>
-            <p>This is the sidebar content.</p>
-        </div>
-    </div>
+    <main class="container">
+        <section class="main-content">
+            <p>Main Content</p>
+        </section>
+        <aside class="aside-content">
+            <p>Aside Content</p>
+        </aside>
+    </main>
 
     <footer class="footer">
         <p>Footer Content</p>
