fixing the header-text

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -10,8 +10,7 @@
     <header>
         <div class="header-text">
             <p>Header Content</p>
-
-
+        </div>
         <nav class="menu">
             <ul>
                 <li><a href="#">Home</a></li>
