fixing the aside

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals by Vinicius Santiago. Learn the basics of dynamic web development, including HTML, CSS, JavaScript, and other essential technologies used to create interactive websites.">
     <meta name="author" content="Vinicius Santiago">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/base.css">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <title>WDD 131 - Dynamic Web Fundamentals - Vinicius Santiago</title>
 </head>
 <body>
     <header>
-        <h1>My name is Vinicius Teixeira Santiago and i go by Vinicius Santiago. I was born in Brazil and live my family in São Paulo. i am currently working as customer support at an iGaming company. I love my wife and my dogs, i also love sports and soccer.</h1>
+        <h1>WDD 131: Dynamic Web Fundamentals - Vinicius T. Santiago</h1>
         <nav class="menu">
             <ul>
                 <li><a href="https://www.linkedin.com/in/vinicius-santiago-051077273/" target="_blank">LinkedIn</a></li>
@@ -21,16 +24,29 @@
     </header>
     <main>
         <section class="card">
-            <h2>São Paulo, Brasil</h2>
-            <p></p>
+            <h2>About Me</h2>
+            <p>My name is Vinicius Teixeira Santiago and i go by Vinicius Santiago. I was born in Brazil and live my family in São Paulo. i am currently working as customer support at an iGaming company. I love my wife and my dogs, i also love sports and soccer.</p>
+            <img src="images/perfil1.jpg" alt="My profile picture.">
         </section>
 
         <section class="card">
-            
+            <h2>São Paulo: The City That Never Sleeps</h2>
+            <p>São Paulo is the largest city in Brazil and one of the biggest in the world, known for its cultural diversity, vibrant economy, and nonstop lifestyle. The city never rests, offering countless opportunities for work and education to people from all over the country. It is also a major tourist destination, featuring iconic spots like Paulista Avenue, Ibirapuera Park, and the Municipal Market. São Paulo is famous for its gastronomy, with renowned restaurants and a unique blend of flavors. It’s a city of contrasts, where modernity and history coexist, always buzzing with energy and innovation.</p>
         </section>
+
+        <aside class="resources">
+            <h2>Web Dev Resources</h2>
+            <ul>
+                <li><a href="https://developer.mozilla.org" target="_blank">MDN Web Docs</a></li>
+                <li><a href="https://css-tricks.com" target="_blank">CSS Tricks</a></li>
+                <li><a href="https://github.com" target="_blank">GitHub</a></li>
+                <li><a href="https://byui.instructure.com" target="_blank">BYU-I Canvas</a></li>
+            </ul>
+        </aside>
     </main>
     <footer>
-
+        <p>© <span id="currentyear"></span> | Vinicius Santiago - São Paulo, Brasil.</p>
+        <p><span id="lasModified"></span></p>
     </footer>
 </body>
 </html>
