css done and jscript also

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/base.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <script src="scripts/getdates.js" defer></script>
     <title>WDD 131 - Dynamic Web Fundamentals - Vinicius Santiago</title>
 </head>
 <body>
@@ -24,14 +25,18 @@
     </header>
     <main>
         <section class="card">
-            <h2>About Me</h2>
-            <p>My name is Vinicius Teixeira Santiago and i go by Vinicius Santiago. I was born in Brazil and live my family in São Paulo. i am currently working as customer support at an iGaming company. I love my wife and my dogs, i also love sports and soccer.</p>
-            <img src="images/perfil1.jpg" alt="My profile picture.">
+            <div class="card-title">About Me</div>
+            <div class="card-content">
+                <p>My name is Vinicius Teixeira Santiago and i go by Vinicius Santiago. I was born in Brazil and live my family in São Paulo. i am currently working as customer support at an iGaming company. I love my wife and my dogs, i also love sports and soccer.</p>
+                <img src="images/perfil1.jpg" alt="My profile picture.">
+            </div>
         </section>
 
         <section class="card">
-            <h2>São Paulo: The City That Never Sleeps</h2>
-            <p>São Paulo is the largest city in Brazil and one of the biggest in the world, known for its cultural diversity, vibrant economy, and nonstop lifestyle. The city never rests, offering countless opportunities for work and education to people from all over the country. It is also a major tourist destination, featuring iconic spots like Paulista Avenue, Ibirapuera Park, and the Municipal Market. São Paulo is famous for its gastronomy, with renowned restaurants and a unique blend of flavors. It’s a city of contrasts, where modernity and history coexist, always buzzing with energy and innovation.</p>
+            <div class="card-title">São Paulo: The City That Never Sleeps</div>
+            <div class="card-content">
+                <p>São Paulo is the largest city in Brazil and one of the biggest in the world, known for its cultural diversity, vibrant economy, and nonstop lifestyle. The city never rests, offering countless opportunities for work and education to people from all over the country. It is also a major tourist destination, featuring iconic spots like Paulista Avenue, Ibirapuera Park, and the Municipal Market. São Paulo is famous for its gastronomy, with renowned restaurants and a unique blend of flavors. It’s a city of contrasts, where modernity and history coexist, always buzzing with energy and innovation.</p>
+            </div>
         </section>
 
         <aside class="resources">
