--- a/place.html
+++ b/place.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Page with informations about Canada">
     <meta name="author" content="Vinicius Santiago">
-    <title>Canada</title>
+    <title>Canada: know more about</title>
     <link rel="stylesheet" href="styles/place.css">
     <script src="scripts/place.js" defer></script>
 </head>
@@ -40,7 +40,7 @@
         </section>
         <section class="weather">
             <h2>Weather</h2>
-            <img src="images/weather.svg" alt="Weather icon" width="100" height="auto">
+            <img src="images/weather.svg" alt="Weather icon" width="100" height="100">
             <ul>
                 <li>Temperature: 1°C</li>
                 <li>Conditions: Cloudy</li>
