--- a/ceara.html
+++ b/ceara.html
@@ -11,7 +11,14 @@
 </head>
 <body>
     <header>Ceara Sporting Club</header>
-    <main></main>
+    <main>
+        <nav>
+            <li><a href="#home">Home</li>
+            <li><a href="history.html">History</li>
+            <li><a href="players.html">Players</li>
+            <li><a href="championship.html">Championships</li>
+        </nav>
+    </main>
     <footer></footer>
 </body>
 </html>
