--- a/ceara.html
+++ b/ceara.html
@@ -16,7 +16,7 @@
             <li><a href="#home">Home</li>
             <li><a href="history.html">History</li>
             <li><a href="players.html">Players</li>
-            <li><a href="championship.html">Championships</li>
+            <li><a href="championships.html">Championships</li>
         </nav>
     </main>
     <footer></footer>
