--- a/ceara.html
+++ b/ceara.html
@@ -19,6 +19,9 @@
             <li><a href="championships.html">Championships</li>
         </nav>
     </main>
-    <footer></footer>
+    <footer>
+        <p>© <span id="currentyear"></span> | Vinicius Santiago - São Paulo, Brasil.</p>
+        <p><span id="lasModified"></span></p>
+    </footer>
 </body>
 </html>
