photo at the header

--- a/ceara.html
+++ b/ceara.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>Ceara Sporting Club</header>
+    <img src="images/brasao-cearasc.png">
     <main>
         <nav>
             <li><a href="#home">Home</li>
@@ -18,6 +19,9 @@
             <li><a href="players.html">Players</li>
             <li><a href="championships.html">Championships</li>
         </nav>
+        <picture>
+            <source srcset=""
+        </picture>
     </main>
     <footer>
         <p>© <span id="currentyear"></span> | Vinicius Santiago - São Paulo, Brasil.</p>
