--- a/history.html
+++ b/history.html
@@ -13,7 +13,7 @@
     <header>Ceara Sporting Club</header>
     <main>
         <nav>
-            <li><a href="#home">Home</li>
+            <li><a href="ceara.html">Home</li>
             <li><a href="history.html">History</li>
             <li><a href="players.html">Players</li>
             <li><a href="championships.html">Championships</li>
