home page added

--- a/ceara.html
+++ b/ceara.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <header>Ceara Sporting Club</header>
-    <img src="images/brasao-cearasc.png">
+    <img src="images/brasao-cearasc.png" alt="Logo do Ceara">
     <main>
         <nav>
-            <li><a href="#home">Home</li>
+            <li><a href="ceara.html">Home</li>
             <li><a href="history.html">History</li>
             <li><a href="players.html">Players</li>
             <li><a href="championships.html">Championships</li>
