--- a/ceara.html
+++ b/ceara.html
@@ -20,7 +20,7 @@
             <li><a href="championships.html">Championships</li>
         </nav>
         <picture>
-            <source srcset=""
+            <img src="images/capa.jpg" alt="Capa de entrada">
         </picture>
     </main>
     <footer>
