--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </main>
     <footer>
         <p>© <span id="currentyear"></span> | Vinicius Santiago - São Paulo, Brasil.</p>
-        <p><span id="lasModified"></span></p>
+        <p><span id="lastModified"></span></p>
     </footer>
 </body>
 </html>
