--- a/ceara.html
+++ b/ceara.html
@@ -23,7 +23,7 @@
         <picture>
             <img src="images/capa.jpg" alt="Capa de entrada" width= 100%>
         </picture>
-
+        <h1>Ceará tua Glóra é Lutar!</h1>
         
         
     </main>
