removed links with a error

--- a/ceara.html
+++ b/ceara.html
@@ -14,10 +14,10 @@
     <img src="images/brasao-cearasc.png" alt="Logo do Ceara">
     <main>
         <nav>
-            <li><a href="ceara.html">Home</li>
-            <li><a href="history.html">History</li>
-            <li><a href="players.html">Players</li>
-            <li><a href="championships.html">Championships</li>
+            <li><a href="ceara.html">Home</a></li>
+            <li><a href="history.html">History</a></li>
+            <li><a href="players.html">Players</a></li>
+            <li><a href="championships.html">Championships</a></li>
         </nav>
         
         <picture>
