--- a/ceara.html
+++ b/ceara.html
@@ -24,7 +24,26 @@
             <img src="images/capa.jpg" alt="Capa de entrada" width= 100%>
         </picture>
         <h1>Ceará tua Glóra é Lutar!</h1>
-        
+
+        <p>Hino do Ceara Sporting Club</p>
+        <p>
+            Teu passado é todo coberto de glórias<br>
+            Dia a dia tu conquistas mais vitórias<br>
+            Tua bandeira alvinegra desfraldada<br>
+            Teu time em campo tem vitória assegurada.<br>
+            <br>
+            Campeão da popularidade<br>
+            Tua torcida hoje é toda a cidade<br>
+            É um grande povo a te estimular<br>
+            É o Vovô Ceará vai ganhar.<br>
+            <br>
+            És o time das grandes campanhas<br>
+            Sempre aqui ou lá fora tu ganhas<br>
+            Com teus craques em campo a brilhar<br>
+            Ceará tua glória é lutar.<br>
+            <br>
+            Autor: José Patápio da Costa Jatahy
+        </p>
         
     </main>
     <footer>
