--- a/history.html
+++ b/history.html
@@ -23,7 +23,13 @@
         <picture>
             <img src="images/capa.jpg" alt="Capa de entrada" width= 100%>
         </picture>
-        
+
+        <img src="images/escudo1.jpg" alt="Escudo 1">
+        <img src="images/escudo2.jpg" alt="Escudo 2">
+        <img src="images/escudo3.jpg" alt="Escudo 3">
+        <img src="images/escudo4.jpg" alt="Escudo 4">
+        <img src="images/escudo5.jpg" alt="Escudo 5">
+        <img src="images/brasao-cearasc.png" alt="Escudo 6">
         
     </main>
     <footer>
