--- a/ceara.html
+++ b/ceara.html
@@ -25,7 +25,30 @@
         </picture>
         <h1>Ceará tua Glóra é Lutar!</h1>
 
-        <p>Hino do Ceara Sporting Club</p>
+        <p>Destaques do ano:</p>
+        
+        <p>Campeonato Cearense</p>
+        <img src="images/richard-penalti.jpg">
+
+        <p>Série A</p>
+        <img src="images/acesso.jpg">
+
+        <p>Artilheiro do Ano</p>
+        <img src="images/Pulga.jpg">
+        <p>Erick Pulga</p>
+
+        <p>Mais Decisivo</p>
+        <img src="images/saulo.jpg">
+        <p>Saulo Mineiro</p>
+
+        <p>Apoio</p>
+        <img src="images/ceara-unidos.jpg">
+
+        <p>União</p>
+        <img src="images/forca.jpg">
+        
+
+        <p><strong>Hino do Ceara Sporting Club</strong></p>
         <p>
             Teu passado é todo coberto de glórias<br>
             Dia a dia tu conquistas mais vitórias<br>
