--- a/history.html
+++ b/history.html
@@ -25,11 +25,17 @@
         </picture>
 
         <img src="images/escudo1.jpg" alt="Escudo 1">
+        <p>1914</p>
         <img src="images/escudo2.jpg" alt="Escudo 2">
+        <p>1930 - 1967 e<br> 1970 - 1972</p>
         <img src="images/escudo3.jpg" alt="Escudo 3">
+        <p>1968 - 1969</p>
         <img src="images/escudo4.jpg" alt="Escudo 4">
+        <p>1969 - 1970</p>
         <img src="images/escudo5.jpg" alt="Escudo 5">
+        <p>1972 - 2002</p>
         <img src="images/brasao-cearasc.png" alt="Escudo 6">
+        <p>2003 - Now</p>
         
     </main>
     <footer>
