--- a/players.html
+++ b/players.html
@@ -23,7 +23,50 @@
         <picture>
             <img src="images/capa.jpg" alt="Capa de entrada" width= 100%>
         </picture>
+
+        <h1>Players</h1>
         
+        <p>Goleiro:</p>
+        <img src="images/01-richard.png">
+        <p>Richard</p>
+
+        <p>Zagueiros:</p>
+        <img src="images/02-david-ricardo.png">
+        <p>David Ricardo</p>
+
+        <img src="images/03-luiz-otavio.png">
+        <p>Luiz Otávio</p>
+
+        <p>Laterais:</p>
+        <img src="images/04-matheus.bahia.png">
+        <p>Matheus Bahia</p>
+
+        <img src="images/05-rafael-ramos.png">
+        <p>Rafael Ramos</p>
+
+        <p>Meias:</p>
+        <img src="images/06-lourenço.png">
+        <p>Lourenço</p>
+
+        <img src="images/07-richardson.png">
+        <p>Richardson</p>
+
+        <img src="images/08-mugni.png">
+        <p>Lucas Mugni</p>
+
+        <p>Atacantes:</p>
+        <img src="images/09-erick-pulga.png">
+        <p>Erick Pulga</p>
+
+        <img src="images/10-aylon.png">
+        <p>Aylon</p>
+
+        <img src="images/11-saulo-mineiro.png">
+        <p>Saulo Mineiro</p>
+
+        <p>Técnico:</p>
+        <img src="images/leo-conde.png">
+        <p>Léo Condé</p>
         
     </main>
     <footer>
