--- a/players.html
+++ b/players.html
@@ -38,7 +38,7 @@
         <p>Luiz Otávio</p>
 
         <p>Laterais:</p>
-        <img src="images/04-matheus.bahia.png">
+        <img src="images/04-matheus-bahia.png">
         <p>Matheus Bahia</p>
 
         <img src="images/05-rafael-ramos.png">
