--- a/players.html
+++ b/players.html
@@ -65,7 +65,7 @@
         <p>Saulo Mineiro</p>
 
         <p>Técnico:</p>
-        <img src="images/leo-conde.png">
+        <img src="images/leo-conde.jpg">
         <p>Léo Condé</p>
         
     </main>
