--- a/championships.html
+++ b/championships.html
@@ -23,7 +23,23 @@
         <picture>
             <img src="images/capa.jpg" alt="Capa de entrada" width= 100%>
         </picture>
+
+    <h1>Championships</h1>
+    <p><strong>46 Campeonatos Cearenses</strong></p>
+        <p>1915, 1916, 1917, 1918, 1919, 1922, 1939(Invicto), 1941(Invicto), 1942, 1948, 1951(Invicto), 1957, 1958, 1961, 1962, 1963(Invicto), 1971, 1972, 1975, 1976, 1977, 1978, 1980, 1981, 1984, 1986, 1989, 1990, 1992, 1993, 1996, 1997, 1998, 1999, 2002, 2006, 2011, 2012, 2013, 2014, 2017, 2018 e 2024(Invicto)</p>
+        <img src="images/ceara-cearense" alt="Campeonato Cearense">
         
+    <p><strong>3 Copas do Nordeste</strong></p>
+        <p>2015(Invicto), 2020(Invicto) e 2023</p>
+        <img src="images/ceara-cne" alt="Copa do Nordeste">
+
+    <p><strong>1 Torneio Norte-Nordeste</strong></p>
+        <p>1969</p>
+        <img src="images/taça-norte" alt="Torneio Norte-Nordeste">
+
+    <p><strong>12 Torneios Início do Ceará</strong></p>
+        <p>1922, 1923, 1926, 1932, 1936, 1937, 1943, 1947, 1952, 1953, 1967 e 1978</p>
+        <img src="images/taça-inicio" alt="Inicio do Ceará">
         
     </main>
     <footer>
