--- a/history.html
+++ b/history.html
@@ -34,7 +34,7 @@
         <p>1969 - 1970</p>
         <img src="images/escudo5.jpg" alt="Escudo 5">
         <p>1972 - 2002</p>
-        <img src="images/brasao-cearasc.png" alt="Escudo 6">
+        <img src="images/ceara-logo.jpg" alt="Escudo 6">
         <p>2003 - Now</p>
         
     </main>
