--- a/players.html
+++ b/players.html
@@ -25,48 +25,49 @@
         </picture>
 
         <h1>Players</h1>
-        
-        <p>Goleiro:</p>
-        <img src="images/01-richard.png">
-        <p>Richard</p>
+        <div class="jogadores">
+            <p>Goleiro:</p>
+            <img src="images/01-richard.png" width="350px" height="450px">
+            <p>Richard</p>
 
-        <p>Zagueiros:</p>
-        <img src="images/02-david-ricardo.png">
-        <p>David Ricardo</p>
+            <p><br>Zagueiros:</p>
+            <img src="images/02-david-ricardo.png" width="350px" height="450px">
+            <p>David Ricardo</p>
 
-        <img src="images/03-luiz-otavio.png">
-        <p>Luiz Otávio</p>
+            <img src="images/03-luiz-otavio.png" width="350px" height="450px">
+            <p>Luiz Otávio</p>
 
-        <p>Laterais:</p>
-        <img src="images/04-matheus-bahia.png">
-        <p>Matheus Bahia</p>
+            <p><br>Laterais:</p>
+            <img src="images/04-matheus-bahia.png" width="350px" height="450px">
+            <p>Matheus Bahia</p>
 
-        <img src="images/05-rafael-ramos.png">
-        <p>Rafael Ramos</p>
+            <img src="images/05-rafael-ramos.png" width="350px" height="450px">
+            <p>Rafael Ramos</p>
 
-        <p>Meias:</p>
-        <img src="images/06-lourenço.png">
-        <p>Lourenço</p>
+            <p><br>Meias:</p>
+            <img src="images/06-lourenço.png" width="350px" height="450px">
+            <p>Lourenço</p>
 
-        <img src="images/07-richardson.png">
-        <p>Richardson</p>
+            <img src="images/07-richardson.png" width="350px" height="450px">
+            <p>Richardson</p>
 
-        <img src="images/08-mugni.png">
-        <p>Lucas Mugni</p>
+            <img src="images/08-mugni.png" width="350px" height="450px">
+            <p>Lucas Mugni</p>
 
-        <p>Atacantes:</p>
-        <img src="images/09-erick-pulga.png">
-        <p>Erick Pulga</p>
+            <p><br>Atacantes:</p>
+            <img src="images/09-erick-pulga.png" width="350px" height="450px">
+            <p>Erick Pulga</p>
 
-        <img src="images/10-aylon.png">
-        <p>Aylon</p>
+            <img src="images/10-aylon.png" width="350px" height="450px">
+            <p>Aylon</p>
 
-        <img src="images/11-saulo-mineiro.png">
-        <p>Saulo Mineiro</p>
+            <img src="images/11-saulo-mineiro.png" width="350px" height="450px">
+            <p>Saulo Mineiro</p>
 
-        <p>Técnico:</p>
-        <img src="images/leo-conde.jpg">
-        <p>Léo Condé</p>
+            <p><br>Técnico:</p>
+            <img src="images/leo-conde.jpg" alt="Leo Condé" width="350px" height="450px">
+            <p>Léo Condé</p>
+        </div>
         
     </main>
     <footer>
