--- a/ceara.html
+++ b/ceara.html
@@ -27,25 +27,23 @@
 
         <p>Destaques do ano:</p>
         
-        <p>Campeonato Cearense</p>
         <img src="images/richard-penalti.jpg">
+        <p>Campeonato Cearense</p>
 
-        <p>Série A</p>
         <img src="images/acesso.jpg">
+        <p>Série A</p>
 
-        <p>Artilheiro do Ano</p>
         <img src="images/Pulga.jpg">
-        <p>Erick Pulga</p>
+        <p>Artilheiro do Ano: Erick Pulga</p>
 
-        <p>Mais Decisivo</p>
         <img src="images/saulo.jpg">
-        <p>Saulo Mineiro</p>
+        <p>Mais Decisivo: Saulo Mineiro</p>
 
-        <p>Apoio</p>
         <img src="images/ceara-unidos.jpg">
+        <p>Apoio</p>
 
-        <p>União</p>
         <img src="images/forca.jpg">
+        <p>União</p>
         
         <div class="hino">
             <p><strong>Hino do Ceara Sporting Club</strong></p>
