adjusted the width

--- a/ceara.html
+++ b/ceara.html
@@ -27,23 +27,25 @@
 
         <p>Destaques do ano:</p>
         
-        <img src="images/richard-penalti.jpg">
-        <p>Campeonato Cearense</p>
+        <div class="destaques">
+            <img src="images/richard-penalti.jpg" width="100%" height="350px">
+            <p>Campeonato Cearense</p>
 
-        <img src="images/acesso.jpg">
-        <p>Série A</p>
+            <img src="images/acesso.jpg" width="100%" height="350px">
+            <p>Série A</p>
 
-        <img src="images/Pulga.jpg">
-        <p>Artilheiro do Ano: Erick Pulga</p>
+            <img src="images/Pulga.jpg" width="100%" height="350px">
+            <p>Artilheiro do Ano: Erick Pulga</p>
 
-        <img src="images/saulo.jpg">
-        <p>Mais Decisivo: Saulo Mineiro</p>
+            <img src="images/saulo.jpg" width="100%" height="350px">
+            <p>Mais Decisivo: Saulo Mineiro</p>
 
-        <img src="images/ceara-unidos.jpg">
-        <p>Apoio</p>
+            <img src="images/ceara-unidos.jpg" width="100%" height="350px">
+            <p>Apoio</p>
 
-        <img src="images/forca.jpg">
-        <p>União</p>
+            <img src="images/forca.jpg" width="100%" height="350px">
+            <p>União</p>
+        </div>
         
         <div class="hino">
             <p><strong>Hino do Ceara Sporting Club</strong></p>
