--- a/players.html
+++ b/players.html
@@ -27,47 +27,113 @@
         <h1>Players</h1>
         <div class="jogadores">
             <p>Goleiro:</p>
-            <img src="images/01-richard.png" width="350px" height="450px">
+            <img src="images/01-richard.png" alt="Richard" width="350px" height="450px">
             <p>Richard</p>
 
             <p><br>Zagueiros:</p>
-            <img src="images/02-david-ricardo.png" width="350px" height="450px">
+            <img src="images/02-david-ricardo.png" alt="David" width="350px" height="450px">
             <p>David Ricardo</p>
 
-            <img src="images/03-luiz-otavio.png" width="350px" height="450px">
+            <img src="images/03-luiz-otavio.png" alt="Luiz" width="350px" height="450px">
             <p>Luiz Otávio</p>
 
             <p><br>Laterais:</p>
-            <img src="images/04-matheus-bahia.png" width="350px" height="450px">
+            <img src="images/04-matheus-bahia.png" alt="Matheus" width="350px" height="450px">
             <p>Matheus Bahia</p>
 
-            <img src="images/05-rafael-ramos.png" width="350px" height="450px">
+            <img src="images/05-rafael-ramos.png" alt="Rafael" width="350px" height="450px">
             <p>Rafael Ramos</p>
 
             <p><br>Meias:</p>
-            <img src="images/06-lourenço.png" width="350px" height="450px">
+            <img src="images/06-lourenço.png" alt="Lourenço" width="350px" height="450px">
             <p>Lourenço</p>
 
-            <img src="images/07-richardson.png" width="350px" height="450px">
+            <img src="images/07-richardson.png" alt="Richardson" width="350px" height="450px">
             <p>Richardson</p>
 
-            <img src="images/08-mugni.png" width="350px" height="450px">
+            <img src="images/08-mugni.png" alt="Mugni" width="350px" height="450px">
             <p>Lucas Mugni</p>
 
             <p><br>Atacantes:</p>
-            <img src="images/09-erick-pulga.png" width="350px" height="450px">
+            <img src="images/09-erick-pulga.png" alt="Pulga" width="350px" height="450px">
             <p>Erick Pulga</p>
 
-            <img src="images/10-aylon.png" width="350px" height="450px">
+            <img src="images/10-aylon.png" alt="Aylon" width="350px" height="450px">
             <p>Aylon</p>
 
-            <img src="images/11-saulo-mineiro.png" width="350px" height="450px">
+            <img src="images/11-saulo-mineiro.png" alt="Saulo" width="350px" height="450px">
             <p>Saulo Mineiro</p>
 
             <p><br>Técnico:</p>
-            <img src="images/leo-conde.jpg" alt="Leo Condé" width="350px" height="450px">
+            <img src="images/leo-conde.jpg" alt="Leo" alt="Leo Condé" width="350px" height="450px">
             <p>Léo Condé</p>
         </div>
+
+        <form action="review.html" method="get">
+
+            <p>Website Rating</p>
+            <fieldset>
+                <legend>Overall Rating:</legend>
+                <div class="rating-group">
+                    <input type="radio" id="rating-1" name="rating" value="1" required>
+                    <label for="rating-1">&#9733;</label>
+                    <input type="radio" id="rating-2" name="rating" value="2" required>
+                    <label for="rating-2">&#9733;&#9733;</label>
+                    <input type="radio" id="rating-3" name="rating" value="3" required>
+                    <label for="rating-3">&#9733;&#9733;&#9733;</label>
+                    <input type="radio" id="rating-4" name="rating" value="4" required>
+                    <label for="rating-4">&#9733;&#9733;&#9733;&#9733;</label>
+                    <input type="radio" id="rating-5" name="rating" value="5" required>
+                    <label for="rating-5">&#9733;&#9733;&#9733;&#9733;&#9733;</label>
+                </div>
+            </fieldset>
+
+            <!-- Date of Installation -->
+            <div>
+                <label for="install-date">Date of Visit:</label>
+                <input type="date" id="install-date" name="install-date" required>
+            </div>
+
+            <!-- Useful Features -->
+            <fieldset>
+                <legend>What parts did you like ?<br><i>(Check all that apply)</i></legend>
+                <div class="features-group">
+                    <div class="feature-item">
+                        <input type="checkbox" id="feature-home" name="features" value="Home Page">
+                        <label for="home">Home Page</label>
+                    </div>
+                    <div class="feature-item">
+                        <input type="checkbox" id="feature-history" name="features" value="History">
+                        <label for="feature-camera">History Page</label>
+                    </div>
+                    <div class="feature-item">
+                        <input type="checkbox" id="feature-players" name="features" value="Players">
+                        <label for="feature-display">Players Page</label>
+                    </div>
+                    <div class="feature-item">
+                        <input type="checkbox" id="feature-championships" name="features" value="Championships">
+                        <label for="feature-performance">Championships page</label>
+                    </div>
+                </div>
+            </fieldset>
+
+            <!-- Written Review -->
+            <div>
+                <label for="review">Any suggestions?<i> (optional)</i></label>
+                <textarea id="review" name="review" rows="4" cols="50" placeholder="I think that..."></textarea>
+            </div>
+
+            <!-- User Name -->
+            <div>
+                <label for="username">Your Name<i> (optional)</i></label>
+                <input type="text" id="username" name="username" placeholder="Your Name">
+            </div>
+
+            <!-- Form Submission Button -->
+            <div>
+                <input type="submit" value="Post Review">
+            </div>
+        </form>
         
     </main>
     <footer>
